--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
             </div>
         </div>
     </div>
-    <div id="footerContainer">
+    <div id="footerContainer" class="active">
         <div class="footer-section">
-            <p>Every Right Reserved &copy; 2024</p>
+           <p>Click On The Grey Box To Hide It</p>
+           <br>
+           <p>Every Right Reserved &copy; 2024</p>
         </div>
         <div class="footer-section">
             <p>Support Me:</p>
