--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
         <pre id="resultOutput"></pre>
     </div>
 <!-- Practise Code -->
-    <div id="practiceProgramSection" style="display: none;">
+    <div id="practiceProgramSection">
         <p>Randomly generated IP: <span id="randomlyGeneratedIP"></span></p>
         <button id="generateButton" onclick="generateRandomIP()">Generate</button>
         <div id="classButtons">
             <button class="classButton" id="classCButton" onclick="toggleClass('C')">Class C IP off</button>
-<button class="classButton" id="classBButton" onclick="toggleClass('B')">Class B IP off</button>
-<button class="classButton" id="classAButton" onclick="toggleClass('A')">Class A IP off</button>
-<button class="classButton" id="classUnderButton" onclick="toggleClass('Under')">Class under IP off</button>
-<button id="checkResultButton" onclick="checkResults()">Check Result</button>
-
+            <button class="classButton" id="classBButton" onclick="toggleClass('B')">Class B IP off</button>
+            <button class="classButton" id="classAButton" onclick="toggleClass('A')">Class A IP off</button>
+            <button class="classButton" id="classUnderButton" onclick="toggleClass('Under')">Class under IP off</button>
+            <button id="checkResultButton" onclick="checkResults()">Check Result</button>
         </div>
         <div id="practiceTable">
             <div class="practice-row">
