--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="ipCalculatorSection">
         <form id="subnetForm">
             <label for="ipInput">Enter IP and Subnet Mask:</label>
-            <input type="text" id="ipInput" autocomplete="off" placeholder="e.g. 192.168.100.1/24" required>
+            <input type="text" id="ipInput" autocomplete="off" placeholder="192.168.100.1/24" required>
         </form>
         <pre id="resultOutput"></pre>
     </div>
