--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="it.png"/>
+    <link rel="icon" type="image/x-icon" href="logo.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IP Subnet Calculator</title>
