--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="footer-section">
            <p>Click On The Grey Box To Hide It</p>
            <br>
-           <p>Every Right Reserved &copy; 2024</p>
+           <p>Every Right Reserved &copy; 2024-2026</p>
         </div>
         <div class="footer-section">
             <p>Support Me:</p>
