--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </style>
 </head>
 <body>
+    <main class="container">
     <button id="switchButton" onclick="toggleSections()">Switch to IP Calculator</button>
     <h1 id="h1Text">Welcome To my Website</h1>
 <!-- Calculator Code -->
@@ -97,6 +98,7 @@
             </div>
         </div>
     </div>
+    </main>
     <div id="footerContainer" class="active">
         <div class="footer-section">
            <p>Click On The Grey Box To Hide It</p>
